Dynamic Spin Feature
This feature tracks thread states. Then, it decides whether to spin
depending upon the number of busy threads versus the number of available
CPUs.

Implementation details:

i) Created a new struct OMRSpinInfo to store information for the spin
heuristic feature. An instance of OMRSpinInfo is stored in
J9ThreadLibrary.

ii) Adding function prototypes for the spin heuristic API, and
allowing public access to the spin heuristic API.

iii) Created C wrappers for atomic add and subtract to inline
VM_AtomicSupport (C++) code in "omrthread.c".

iv) Added enum to control activation and deactivation of spin heuristic.

v) In "omrthread.c", initializing an instance of OMRSpinInfo in
J9ThreadLibrary, and incrementing and decrementing wait counter around
thread waits.

vi) Using the heurisitc to decide whether to spin in
omrthread_spinlock_acquire. Also defining the spin heuristic API in
"threadhelpers.cpp".

vii) Adding OMR_DYNAMIC_SPIN_FEATURE flag to enable or disable this
feature at compile time. For the time being, this feature is deactivated
at compile time.

Task 108046

Signed-off-by: Babneet Singh <sbabneet@ca.ibm.com>

--- a/include_core/omrcfg.h.in
+++ b/include_core/omrcfg.h.in
@@ -210,6 +210,12 @@ extern "C" {
 @OMR_NOTIFY_POLICY_CONTROL@
 
 /**
+ * Dynamic spin feature will be enabled at compile time.
+ * ifRemoved: Dynamic spin feature will be disabled at compile time.
+ */
+@OMR_DYNAMIC_SPIN_FEATURE@
+
+/**
  * This enables the option to select different algorithms for yielding.
  */
 @OMR_THR_YIELD_ALG@
